同步 index.html 文件的最新更改

--- a/index.html
+++ b/index.html
@@ -682,10 +682,14 @@
             }
             
             .note-card,
-            .education-card,
-            .award-card {
+            .education-card {
                 min-width: 95%;
                 width: 95%;
+            }
+
+            .award-card {
+                min-width: 25%;
+                width: 25%;
             }
             
             .blog-title,
