--- a/index.html
+++ b/index.html
@@ -1010,7 +1010,7 @@
                 
                 <article class="project-item">
                     <div class="project-content">
-                        <h3 class="project-title clickable-title" </h3>
+                        <h3 class="project-title"> 招商银行第9季数字金融训练营</h3>
                         <p class="project-date">2025.04 — 2025.05</p>
                         <p class="project-description">
                             项目背景：基于LLaMA-Factory框架与LoRA方法微调Deepseek-Coder<br>
